--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(255 160 93);
+    background: #e4beab;
     background-size: cover;
     background-attachment: fixed;
     background-position: top;
