--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,6 +2,7 @@ nav{
     width: 100%;
     top: 0;
     position: sticky;
+    padding: 15px;
 }
 
 nav > ul{
@@ -30,5 +31,5 @@ nav > ul > li:hover {
 }
 
 nav > ul > li:hover > a {
-    color: #ed1c24;
+    color: #ac0700;
 }
